--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -35,8 +35,14 @@
     </form>
 
     <hr />
-
-    <!-- TODO #2 - Loop over jobs map to display all job fields -->
+    <div th:fragment="list_all">
+        <table th:each = "job : ${jobs}" class="job-listing">
+            <tr th:each = "column : ${job}">
+                <td th:text="${column.key}"></td>
+                <td th:text="${column.value}"></td>
+            </tr>
+        </table>
+    </div>
 
 </div>
 
