--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -12,6 +12,14 @@
 
     <!-- TODO #3 - Use the same list display from search.html -->
 
+    <div th:replace="search :: list_all"></div>
+    <!-- <table th:each = "job : ${jobs}" class="job-listing">
+             <tr th:each = "column : ${job}">
+                 <td th:text="${column.key}"></td>
+                 <td th:text="${column.value}"></td>
+             </tr>
+     </table>
+ -->
 </div>
 
 </body>
